feat: add about-shelter section

--- a/style.css
+++ b/style.css
@@ -18,8 +18,21 @@ header {
 	margin-top: 30px;
 	padding-right: 40px;
 }
+
+.logo-container {
+	margin-left: 40px;
+}
+
 .logo-container h1 {
 	color: #F1CDB3;
+	font-family: 'Noto Serif Georgian', serif;
+	letter-spacing: 0.06em;
+}
+.logo-container p {
+	color: #fff;
+	font-size: 13px;
+	font-family: Arial, Helvetica, sans-serif;
+	letter-spacing: 0.1em;
 }
 
 .nav {
@@ -27,15 +40,32 @@ header {
 }
 .nav-list {
 	display: flex;
+	gap: 35px;
 }
 ul li {
 	list-style-type: none;
 }
-.nav-link a {
-	margin-left: 35px;
+
+a {
 	text-decoration: none;
 }
-
+.nav-link a {
+	font-family: 'Arial';
+	color: #CDCDCD;
+	font-size: 15px;
+	line-height: 24px;
+	text-align: center;
+	transition: color .5s ease;
+}
+.nav-link a:hover {
+	color: #fff;
+}
+.active-link {
+	border-bottom: 3px solid #F1CDB3;
+}
+.active-link a {
+	color: #fff;
+}
 .make-friend {
 	display: flex;
 	background-image: url(images/start-screen-background.png);
@@ -43,10 +73,42 @@ ul li {
 	background-size: cover;
 	justify-content: space-between;
 	padding-top: 180px;
+	align-items: flex-start;
 }
 .friend-container {
 	width: 45%;
+	margin-left: 40px;
 }
+.friend-container h2 {
+	font-family: 'Noto Serif Georgian', serif;
+	font-style: normal;
+	font-weight: 400;
+	font-size: 44px;
+	color: #fff;
+	width: 310px;
+	margin-top: 163px;
+	margin-bottom: 42px;
+}
+.friend-container p {
+	font-family: 'Arial';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 15px;
+	width: 460px;
+	line-height: 160%;
+	color: #CDCDCD;
+}
+
+.friend-btn {
+	background-color: #F1CDB3;
+	padding: 15px 45px;
+	width: 207px;
+	height: 52px;
+	margin-top: 42px;
+	border-radius: 100px;
+	text-align: center;
+}
+
 .make-friend__img {
 	height: 728px;
 	width: 698px;
