--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ header {
 .logo-container h1 {
 	color: #F1CDB3;
 	font-family: 'Noto Serif Georgian', serif;
+	font-weight: 400;
+	font-style: normal;
 	letter-spacing: 0.06em;
 }
 .logo-container p {
@@ -33,6 +35,7 @@ header {
 	font-size: 13px;
 	font-family: Arial, Helvetica, sans-serif;
 	letter-spacing: 0.1em;
+	margin-top: 10px;
 }
 
 .nav {
@@ -114,4 +117,47 @@ a {
 	width: 698px;
 	background-size: cover;
 	background-repeat: no-repeat;
+}
+
+.about-shelter {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	/* margin-top: 80px; */
+	height: 588px;
+}
+
+.about-shelter__wrap {
+	display: flex;
+	justify-content: space-around;
+	width: 50%;
+}
+.about-shelter__img {
+	background-repeat: no-repeat;
+	background-size: contain;
+	width: 50%;
+	height: 408px;
+}
+
+.about-shelter__info {
+	width: 50%;
+}
+.about-shelter__info h3 {
+	width: 50%;
+	font-family: 'Noto Serif Georgian', serif;
+	font-style: normal;
+	font-size: 35px;
+	font-weight: 400;
+	line-height: 130%;
+	color: #545454;
+}
+.about-shelter__info p {
+	width: 430px;
+	margin-top: 25px;
+	font-family: 'Arial';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 15px;
+	line-height: 160%;
+	color: #4c4c4c;
 }
