--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ a {
 	font-weight: 400;
 	font-size: 44px;
 	color: #fff;
-	width: 310px;
+	/* width: 310px; */
 	margin-top: 163px;
 	margin-bottom: 42px;
 }
@@ -160,4 +160,90 @@ a {
 	font-size: 15px;
 	line-height: 160%;
 	color: #4c4c4c;
+}
+
+/* OUR FRIENDS */
+
+.our-friends {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 1280px;
+	background-color: #F6F6F6;
+}
+
+.our-friends__header h3{
+	font-family: 'Noto Serif Georgian', serif;
+	font-weight: 400;
+	font-size: 35px;
+	color: #545454;
+	margin-top: 80px;
+	text-align: center;
+}
+
+.our-friends__wrapper {
+	display: flex;
+	margin-top: 60px;
+	justify-content: center;
+	align-items: center;
+	gap: 53px;
+	
+}
+
+.pet-last, .pet-next {
+	width: 52px;
+	height: 52px;
+	background-color: transparent;
+	border: 2px solid #F1CDB3;
+	border-radius: 100px;
+	text-align: center;
+	padding-top: 13px;
+}
+
+.pet-box {
+	display: flex;
+	justify-content: center;
+	gap: 90px;
+}
+
+.pet-box-item {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 270px;
+	height: 435px;
+	background-color: #fafafa;
+}
+
+.pet {
+	width: 270px;
+	height: 270px;
+}
+
+.pet-box-item p {
+	margin-top: 30px;
+	font-family: 'Noto Serif Georgian', serif;
+	font-size: 20px;
+	font-weight: 400;
+	color: #545454;
+	text-align: center;
+}
+
+.pet-btn {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 30px;
+	width: 187px;
+	height: 52px;
+	border: 2px solid #F1CDB3;
+	border-radius: 100px;
+}
+
+.pet-btn a {
+	color: #292929;
+	font-family: 'Noto Serif Georgian', serif;
+	font-size: 17px;
+	font-weight: 400;
+	letter-spacing: .06em;
 }
